20190412 - Excluding external JS libs from codacy check

--- a/.codacy.yml
+++ b/.codacy.yml
@@ -2,5 +2,9 @@
 exclude_paths:
   - '.github/**'
   - '.github/**/*'
+  - 'app/js/datatables/**'
+  - 'app/js/bootstrap/**'
+  - 'app/js/select2/**'
+  - 'app/js/jquery/**'
   - 'docs/**'
   - 'README.md'
