--- a/package.json
+++ b/package.json
@@ -37,9 +37,7 @@
       "category": "System"
     }
   },
-  "dependencies": {
-    
-  },
+  "dependencies": {},
   "devDependencies": {
     "electron": "^4.1.4",
     "electron-builder": "^20.39.0"
