--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "logre",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A simple syslog reader",
   "main": "main.js",
   "scripts": {
@@ -33,7 +33,7 @@
         "zip"
       ],
       "executableName": "logre",
-      "icon": "build/icons/icon.png",
+      "icon": "app/img/icon/icon.png",
       "description": "A simple syslog reader",
       "category": "System"
     }
