--- a/.codacy.yml
+++ b/.codacy.yml
@@ -6,6 +6,7 @@ exclude_paths:
   - 'app/js/bootstrap/**'
   - 'app/js/select2/**'
   - 'app/js/jquery/**'
+  - 'app/js/semver/**'
   - 'docs/**'
   - 'README.md'
   - 'CHANGELOG.md'
