--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "logre",
-  "version": "1.1.20200314",
+  "version": "1.1.20200316",
   "description": "A simple syslog reader",
   "main": "main.js",
   "scripts": {
@@ -41,24 +41,32 @@
     }
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.1",
     "about-window": "^1.13.2",
     "animate.css": "^3.7.2",
     "bootstrap": "^4.4.1",
+    "custom-electron-titlebar": "^3.2.2-hotfix62",
+    "electron-log": "^4.1.0",
+    "journalctl": "^1.1.0",
     "jquery": "^3.4.1",
     "noty": "^3.2.0-beta",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "which": "^2.0.2"
   },
   "devDependencies": {
     "electron": "^8.1.1",
     "electron-builder": "^22.4.1",
     "snazzy": "^8.0.0",
     "standardx": "^5.0.0"
-},
-"standardx": {
+  },
+  "standardx": {
     "ignore": [
       "/dist",
       "/docs/jsdocs",
-      "/test/spec.js"
+      "/test/spec.js",
+      "/app/js/datatables",
+      "/app/js/select2",
+      "/app/js/semver"
     ]
   }
 }
