--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "logre",
-  "version": "1.1.20200317",
+  "version": "1.1.20200324",
   "description": "a simple log reader for linux",
   "main": "main.js",
   "scripts": {
@@ -31,6 +31,9 @@
       "target": [
         "AppImage",
         "deb",
+        "freebsd",
+        "pacman",
+        "rpm",
         "Snap",
         "zip"
       ],
@@ -41,26 +44,27 @@
     }
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.12.1",
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "about-window": "^1.13.2",
     "animate.css": "^3.7.2",
     "bootstrap": "^4.4.1",
     "custom-electron-titlebar": "^3.2.2-hotfix62",
-    "datatables": "^1.10.18",
-    "datatables.net": "^1.10.20",
-    "datatables.net-bs": "^1.10.20",
-    "datatables.net-buttons": "^1.6.1",
-    "datatables.net-colreorder": "^1.5.2",
+    "datatables.net-buttons-dt": "^1.6.1",
     "datatables.net-colreorder-dt": "^1.5.2",
-    "datatables.net-fixedcolumns": "^3.3.0",
-    "datatables.net-fixedheader": "^3.1.6",
-    "datatables.net-scroller": "^2.0.1",
-    "datatables.net-select": "^1.3.1",
+    "datatables.net-dt": "^1.10.20",
+    "datatables.net-keytable-dt": "^2.5.1",
+    "datatables.net-responsive-dt": "^2.2.3",
+    "datatables.net-select-dt": "^1.3.1",
     "electron-log": "^4.1.0",
+    "electron-unhandled": "^3.0.2",
+    "electron-util": "^0.14.0",
     "journalctl": "^1.1.0",
     "jquery": "^3.4.1",
+    "jszip": "^3.2.2",
     "noty": "^3.2.0-beta",
+    "pdfmake": "^0.1.65",
     "popper.js": "^1.16.1",
+    "simple-syslog-server": "^1.0.0",
     "which": "^2.0.2"
   },
   "devDependencies": {
@@ -75,7 +79,8 @@
       "/docs/jsdocs",
       "/test/spec.js",
       "/app/js/select2",
-      "/app/js/semver"
+      "/app/js/semver",
+      "/app/js/DataTables"
     ]
   }
 }
