--- a/.codacy.yml
+++ b/.codacy.yml
@@ -2,10 +2,8 @@
 exclude_paths:
   - '.github/**'
   - '.github/**/*'
-  - 'app/js/datatables/**'
-  - 'app/js/bootstrap/**'
+  - 'app/js/DataTables/**'
   - 'app/js/select2/**'
-  - 'app/js/jquery/**'
   - 'app/js/semver/**'
   - 'docs/**'
   - 'README.md'
